wip - parse markdown by markdownit

--- a/packages/fb-arthur/package.json
+++ b/packages/fb-arthur/package.json
@@ -7,6 +7,19 @@
     "dist"
   ],
   "scripts": {
-    "dev": "webpack --config src/webpack/webpack.dev.js --watch"
+    "dev": "webpack --config src/webpack/webpack.dev.js --watch",
+    "build": "webpack --config src/webpack/webpack.prod.js"
+  },
+  "devDependencies": {
+    "@types/chrome": "^0.0.79",
+    "css-loader": "^2.1.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "vue-loader": "^15.6.2",
+    "vue-template-compiler": "^2.6.2"
+  },
+  "dependencies": {
+    "markdown-it": "8.4.1",
+    "vue": "^2.6.2"
   }
 }
