--- a/packages/fb-arthur/static/manifest.json
+++ b/packages/fb-arthur/static/manifest.json
@@ -8,12 +8,14 @@
     "128": "icons/128.png"
   },
   "background": {
-    "scripts": ["background.js"]
+    "scripts": ["js/background.js"]
   },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content-script.js"]
+      "js": ["js/inject.js"]
     }
-  ]
+  ],
+  "web_accessible_resources": ["js/content-script.js"],
+  "permissions": ["activeTab"]
 }
