--- a/packages/fb-arthur/tsconfig.json
+++ b/packages/fb-arthur/tsconfig.json
@@ -2,6 +2,9 @@
   "extends": "../tsconfig.settings.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "dist"
+    "outDir": "./dist",
+    "jsx": "react",
+    "noImplicitAny": false,
+    "target": "es5"
   }
 }
