--- a/packages/tsconfig.settings.json
+++ b/packages/tsconfig.settings.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es2015",
     "module": "commonjs",
+    "lib": ["dom", "es2017"],
     "moduleResolution": "node",
     "esModuleInterop": true,
     "declaration": true,
