feat - highlight code

--- a/packages/fb-arthur/static/manifest.json
+++ b/packages/fb-arthur/static/manifest.json
@@ -12,7 +12,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["https://*.facebook.com/*"],
       "js": ["js/inject.js"]
     }
   ],
