--- a/packages/fb-arthur/tsconfig.json
+++ b/packages/fb-arthur/tsconfig.json
@@ -1,10 +1,14 @@
 {
   "extends": "../tsconfig.settings.json",
   "compilerOptions": {
+    "baseUrl": ".",
     "rootDir": "src",
     "outDir": "./dist",
-    "jsx": "react",
-    "noImplicitAny": false,
-    "target": "es5"
-  }
+    "target": "esnext",
+    "module": "esnext",
+    "strict": true,
+    "jsx": "preserve",
+    "allowJs": true
+  },
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
