--- a/packages/fb-arthur/package.json
+++ b/packages/fb-arthur/package.json
@@ -21,6 +21,8 @@
     "vue-template-compiler": "^2.6.2"
   },
   "dependencies": {
+    "@babel/core": "^7.2.2",
+    "babel-loader": "^8.0.5",
     "escape-html": "^1.0.3",
     "markdown-it": "8.4.1",
     "markdown-it-highlightjs": "^3.0.0",
